--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/iljun/Gitbook#readme",
   "dependencies": {
+    "gitbook": "^3.2.3",
     "gitbook-cli": "^2.3.2"
   }
 }
